# UA-Clarity-API

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check-required-files.yml  run-tests.yml
ua_clarity_api/: get_endpoint_map.py  get_multiple_items.xml  post_batch_receive_template.xml  ua_clarity_api.py
ua_clarity_api/tests/: post_container_template.xml  test_ua_clarity_api.py
