[tool.poetry]
name = "ua-clarity-api"
version = "1.1.5"
description = "Provides a simple REST implementation for use with Clarity endpoints."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
ua-generic-rest-api = "^2.0.6"
beautifulsoup4 = "^4.12.2"
nose = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
